--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sqflite: ^1.3.2+1
   path_provider: ^1.6.24
   http: ^0.12.2
+  test: ^1.5.1
 
 dev_dependencies:
   flutter_test:
